# rust_watermodel

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.precompute  README.md  docker-compose.yml  package.json  wasm-pack.toml
docs/: precomputation_guide.md
scripts/: precompute-docker.ps1  precompute.ps1
src/: dem.rs  flow.rs  lib.rs  main.rs  precompute.rs  visualization.rs  web.rs  web_geotiff.rs
www/: fix-three-loading.js  index.html  index.js  landing_scene.js  precomputed_viewer.html  precomputed_viewer.js  test-three.js  test.html  three_renderer.js  water_detection_algorithm.js  webgl-diagnostics.js
