[package]
name = "rust_watermodel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
ndarray = "0.15.6"
thiserror = "1.0.38"

# GeoTIFF handling (native only)
geotiff = { version = "0.0.2", optional = true }
gdal = { version = "0.11.0", features = ["bindgen", "ndarray"], optional = true }

# Serialization for pre-computed data
bincode = "1.3"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# WebAssembly bindings
wasm-bindgen = "0.2.84"
js-sys = "0.3.61"
web-sys = { version = "0.3.61", features = ["console", "File", "Blob", "FileReader", "ProgressEvent"] }
wasm-bindgen-futures = "0.4.34"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5"
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["web"]
web = []
native = ["gdal", "geotiff"]
wee_alloc = ["dep:wee_alloc"]

# Make smaller wasm binaries in release mode
[profile.release]
lto = true
opt-level = 3